@@ -1,6 +1,12 @@
 2007-10-03  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
+	  src/menu-items.c
+		- Fixups for Network -> AccessPoint changes in NM
+
+2007-10-03  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
 	  src/applet.h
 		- (get_first_active_device): use active connection list now
 		- (nma_menu_device_add_networks, nma_add_networks_helper): don't depend
